cmake_minimum_required(VERSION 3.16)

message(STATUS "Using CMake Version ${CMAKE_VERSION}")

set(CMAKE_CONFIGURATION_TYPES Release Debug CACHE INTERNAL "")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTESION OFF) 

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

project("nautilus-test") 

message(STATUS "CompilerID ${CMAKE_CXX_COMPILER_ID}")

add_subdirectory("src/test")
